# langgraph-chatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  justfile  multi-agent-rag-project-description.md
backend/: .wranglerignore  cf_entry.py  pyproject.toml  wrangler.toml
backend/app/: main.py
backend/app/adapters/conversation/: sqlite.py
backend/app/adapters/embeddings/: ollama.py  workers_ai.py
backend/app/adapters/ingestion/: notion.py
backend/app/adapters/llm/: anthropic.py  ollama.py
backend/app/adapters/storage/: local.py
backend/app/adapters/vectorstore/: qdrant.py  vectorize.py
backend/app/adapters/worklog/: http.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  collections.py  conversations.py  documents.py  notion.py  system.py  webhooks.py
backend/app/core/config/: loader.py  models.py
backend/app/core/graph/: graph.py  state.py
backend/app/core/models/: types.py
backend/app/core/operations/: collections.py  conversation_memory.py
backend/app/ingestion/: chunker.py  pipeline.py
backend/app/ports/: conversation.py  embedding.py  llm.py  notion.py  storage.py  vectorstore.py  worklog.py
backend/app/tools/: definitions.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_conversation_memory.py  test_ingestion_pipeline.py  test_qdrant_adapter.py
backend/tests/unit/api/: test_chat_route_memory.py  test_conversations_route.py  test_dependencies.py  test_documents_route.py  test_notion_route.py  test_system.py
backend/tests/unit/core/: test_adapters.py  (+13 more)
(+56 files in other folders)
